# sniper

./: .gitignore  AGENTS.md  README.md  RECEIVER_CODE_WALKTHROUGH.md  SENDER_CODE_READING.md  start.sh  start_receiver.sh  start_sender.sh
Pacific_doorlock_sniper/: .gitignore  README.md
Pacific_doorlock_sniper/src/bringup/launch/: sniper.launch.py
Pacific_doorlock_sniper/src/doorlock_decoder/doorlock_decoder/: video_decoder_node.py
Pacific_doorlock_sniper/src/doorlock_sniper/include/doorlock_sniper/: video_encoder_node.hpp
Pacific_doorlock_sniper/src/doorlock_sniper/src/: video_encoder_node.cpp
Pacific_doorlock_sniper/src/hik_camera/: CMakeLists.txt
Pacific_doorlock_sniper/src/hik_camera/src/: hik_camera_node.cpp
receiver/: main.py  package.xml  requirements.txt  setup.cfg  setup.py  start.sh
receiver/config/: receiver_params.yaml
receiver/launch/: receiver.launch.py
receiver/mqtt_receiver_node/: mqtt_receiver_node.py  parameters.py
receiver/mqtt_receiver_node/proto/: __init__.py
receiver/receiver/: mqtt_client.py  stats_tracker.py  video_decoder_node.py
receiver/receiver/proto/: CustomByteBlock.proto
receiver/video_decoder_node/: parameters.py  video_decoder_node.py
sender/: CMakeLists.txt  main.cpp  package.xml  start.sh
sender/camera/: hik_camera_node.cpp  hik_camera_node.hpp
sender/camera_encoder_node/: camera_encoder_node.cpp
sender/config/: sender_params.yaml
sender/debug/: debug_bridge.cpp  debug_bridge.hpp  main.py  mqtt_bridge_node.py  mqtt_server.py  requirements.txt  serial_parser.py
sender/debug/proto/: CustomByteBlock_pb2.py
sender/encoder/: video_encoder_node.cpp  video_encoder_node.hpp
sender/hik_camera_node/: hik_camera_node.cpp  hik_camera_node.hpp
sender/launch/: sender.launch.py
sender/local_mqtt/: local_mqtt_bridge.cpp  local_mqtt_bridge.hpp  main.py  serial_parser.py
sender/local_test/: local_test_bridge.cpp  local_test_bridge.hpp  main.py  mqtt_server.py  serial_parser.py
sender/mqtt_broker_node/: __init__.py  broker.py  mqtt_broker_node.py
sender/mqtt_sender_node/: __init__.py  mqtt_sender_node.py  publisher.py  rm_frame.py
sender/mqtt_sender_node/proto/: CustomByteBlock.proto  __init__.py
sender/protocol/: crc16.hpp  crc8.hpp  serial_frame.cpp  serial_frame.hpp
sender/rm_frame_encoder_node/: rm_frame.cpp  rm_frame.hpp  rm_frame_encoder_node.cpp  rm_frame_encoder_node.hpp
sender/serial/: serial_send_worker.cpp  serial_send_worker.hpp  serial_writer.cpp  serial_writer.hpp
sender/serial_sender_node/: serial_sender_node.cpp  serial_sender_node.hpp  serial_writer.cpp  serial_writer.hpp
sender/video_encoder_node/: video_encoder_node.cpp  video_encoder_node.hpp
tools/: mqtt_test.py
