<?xml version="1.0"?>
<package format="3">
  <name>sender</name>
  <version>0.1.0</version>
  <description>
    Low-bandwidth H264 video encoder + serial bridge for RoboMaster referee system (0x0310).
    Dual output: 150B VideoPacket (ROS2, compatible with doorlock_decoder) + 309B serial frame (USB CDC + debug MQTT).
  </description>
  <maintainer email="dev@example.com">developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>doorlock_sniper</depend>
  <depend>libopencv-dev</depend>
  <depend>libgstreamer1.0-dev</depend>
  <depend>libgstreamer-plugins-base1.0-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
